terraform/modules/vpc/gateway.tf
resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id

    tags = {
        Name = "internet-gateway"
    }
}

resource "aws_nat_gateway" "this" {
    allocation_id = aws_eip.this.id
    subnet_id = aws_subnet.a.id

    tags = {
        Name = "nat-gateway"
    }
}
